--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,10 @@
     left: 0;
     width: 100%;
     height: 24px;
-    position:absolute;
+    position:fixed;
     padding-top: 10px;
     background-color: #7e8b9e;
-    color: #eeeeee;
+    
 }
 
 #canvas-container {
@@ -61,6 +61,7 @@ body {
     font-family: monospace;
     text-align: center;
     background-color: #7e8b9e;
+    color: #eeeeee;
 }
 
 .source-code {
@@ -96,7 +97,7 @@ body {
     background-color: #8e9bAe;
     outline: none;
     border: none;
-    color: #000;
+    color: #eeeeee;
 
 }
 
@@ -124,6 +125,7 @@ body {
     height: 90px;
     border: 1px solid;
     background-color: #fff;
+    color: #000;
 }
 
 #memory-output {
@@ -136,6 +138,7 @@ body {
     text-align:left;
     padding-left: 10px;
     background-color: #fff;
+    color: #000;
 }
 
 #mem-controls {
@@ -153,6 +156,7 @@ body {
     text-align:left;
     padding-left: 10px;
     background-color: #fff; 
+    color: #000;
 }
 
 #canvas {
